<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".BookFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

    <TextView
        android:id="@+id/page_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="Book Details"
        android:textAlignment="center"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/second_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/book_title_string"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/page_header" />

    <TextView
        android:id="@+id/second_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/book_author_string"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/second_title" />

    <TextView
        android:id="@+id/second_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/book_genre_string"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/second_author" />

    <TextView
        android:id="@+id/second_publicationYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/book_publication_year_string"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/second_genre" />

    <TextView
        android:id="@+id/second_read_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/book_status_string"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/second_publicationYear" />

    <Button
        android:id="@+id/button_to_wishlist"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/rounded_corner"
        android:text="@string/back_to_wishlist"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/second_read_status" />

    <Button
        android:id="@+id/button_to_edit"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/rounded_corner"
        android:text="@string/edit_book"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/button_to_delete"
        app:layout_constraintStart_toEndOf="@+id/button_to_wishlist"
        app:layout_constraintTop_toBottomOf="@+id/second_read_status" />

    <Button
        android:id="@+id/button_to_delete"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/rounded_corner"
        android:text="DELETE BOOK"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/second_read_status" />

    </androidx.constraintlayout.widget.ConstraintLayout>