<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="12dp"
    app:cardElevation="8dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/add_city_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/edit_book_dialog_title"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/titleInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/titleInputLayout"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_city_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_book_title_input"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/enter_book_title"
                android:inputType="text"
                android:maxLength="50" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/authorInputLayout"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_author_input"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/enter_book_author"
                android:inputType="text"
                android:maxLength="30"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/genreInputLayout"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/authorInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_genre_input"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/enter_book_genre"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/publicationInputLayout"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/genreInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_publication_input"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/enter_book_publication_year"
                android:inputType="number"
                android:maxLength="4" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/confirmBook_button"
            android:layout_width="105dp"
            android:layout_height="53dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:background="@color/white"
            android:text="@string/ok"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/cancelBook_button"
            android:layout_width="105dp"
            android:layout_height="53dp"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="8dp"
            android:background="@color/white"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/cancelBook_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/publicationInputLayout">

            <RadioButton
                android:id="@+id/edit_radio_button_unread"
                android:layout_width="115dp"
                android:layout_height="48dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/unread" />

            <RadioButton
                android:id="@+id/edit_radio_button_read"
                android:layout_width="115dp"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="8dp"
                android:text="@string/read" />

        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>